@@ -1,0 +1,42 @@
+[Project]
+name: "libfdatetime"
+status: "alpha"
+description: "a library for date and time data types"
+features: [
+    "debug_output",
+    "git", "source_package",
+    "cygwin", "gcc", "mingw", "msvscpp",
+    "dpkg", "rpm"]
+
+[source_package]
+url: "https://googledrive.com/host/0B3fBvzttpiiSQlBfaUlYTmhzUjQ/"
+
+[git]
+url: "https://github.com/libyal/libfdatetime.git"
+
+[cygwin]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "cygfdatetime-0.dll"
+
+[gcc]
+build_dependencies: []
+static_build_dependencies: []
+
+[mingw]
+build_dependencies: []
+dll_dependencies: [
+    "**TODO describe dependencies**"]
+dll_filename: "libfdatetime-1.dll"
+
+[msvscpp]
+build_dependencies: []
+dll_dependencies: []
+
+[dpkg]
+build_dependencies: []
+
+[rpm]
+build_dependencies: []
+
