@@ -5,7 +5,7 @@ Summary: Library to support various date and time formats that are used in file 
 Group: System Environment/Libraries
 License: LGPL
 Source: %{name}-%{version}.tar.gz
-URL: http://code.google.com/p/libfdatetime/
+URL: https://github.com/libyal/libfdatetime/
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libfdatetime_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcstring_spec_requires@
 @libfdatetime_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcstring_spec_build_requires@
@@ -46,7 +46,7 @@ rm -rf ${RPM_BUILD_ROOT}
 
 %files devel
 %defattr(644,root,root,755)
-%doc AUTHORS COPYING NEWS README README.macosx ChangeLog
+%doc AUTHORS COPYING NEWS README ChangeLog
 %{_libdir}/*.a
 %{_libdir}/*.la
 %{_libdir}/*.so
