@@ -25,6 +25,9 @@ HFS date/time
 Deployment
 * add macosx files
 
+20140920
+* changes for project site move
+
 20140402
 * code clean up
 
